<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps</string>
    <string name="spotifyStreamerButtonTitle">SPOTIFY STREAMER</string>
    <string name="scoresAppButtonTitle">SCORES APP</string>
    <string name="libraryAppButtonTitle">LIBRARY APP</string>
    <string name="buildItBiggerButtonTitle">BUILD IT BIGGER</string>
    <string name="xyzReaderButtonTitle">XYZ READER</string>
    <string name="capstoneButtonTitle">CAPSTONE: MY OWN APP</string>
    <string name="mainTitle">My Nanodegree Apps!</string>
</resources>
