<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitle"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|top" />

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="412dp"
    android:id="@+id/layout_buttons"
        android:layout_gravity="center"
        android:paddingTop="50dp">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamerButtonTitle"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:width="250dp"
        android:height="50dp"
            android:layout_marginBottom="5dp"
            android:background="#F08C35"
            android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresAppButtonTitle"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:width="250dp"
        android:height="50dp"
        android:layout_marginBottom="5dp"
        android:background="#F08C35"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryAppButtonTitle"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:width="250dp"
        android:height="50dp"
        android:layout_marginBottom="5dp"
        android:background="#F08C35"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBiggerButtonTitle"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:width="250dp"
        android:height="50dp"
        android:layout_marginBottom="5dp"
        android:background="#F08C35"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzReaderButtonTitle"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:width="250dp"
        android:height="50dp"
        android:layout_marginBottom="5dp"
        android:background="#F08C35"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstoneButtonTitle"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:width="250dp"
        android:height="50dp"
        android:layout_marginBottom="5dp"
        android:background="#ffff0000"
        android:onClick="displayToast" />
</LinearLayout>

</FrameLayout>
